--- a/fees.html
+++ b/fees.html
@@ -4,7 +4,7 @@
         
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Contact Me</title>
+        <title>My Fees</title>
         <meta name="viewport" content="width=device-width">
 
         <!-- syntax highlighting CSS -->
@@ -49,9 +49,18 @@
               </nav>
                   
             </header>
-                <h1>Contact Me </h1>
+                <h1>My Fees </h1>
 
-<p>Please use my contact details below</p>
+<p>parents have found my rates very reasonable for the area.</p>
+
+<ul>
+<li>Day care - £4.50 per hour</li>
+<li>Before / After school - £5.00 per hour</li>
+</ul>
+
+<p>(Additional charges for school pickup / dropoff).</p>
+
+<p>Babysitting services are also available.</p>
 
 
             <div class="footer">
