--- a/qualifications.html
+++ b/qualifications.html
@@ -42,7 +42,8 @@
                     <li class="even"><a class="extra" href="/service.html">my service</a></li>
                     <li class="odd"><a class="extra" href="/qualifications.html">qualifications</a></li>
                     <li class="even"><a class="extra" href="/vacancies.html">vacancies</a></li>
-                    <li class="odd"><a class="extra" href="/contact.html">contact me</a></li>
+                    <li class="odd"><a class="extra" href="/fees.html">contact me</a></li>
+                    <li class="even"><a class="extra" href="/contact.html">contact me</a></li>
                     
                 </ul>
               </nav>
@@ -50,26 +51,27 @@
             </header>
                 <h1>Qualifications </h1>
 
-<p>Here is some information about my qualifications</p>
+<p>I have over 20 years of experience in childcare. My qualifications include:</p>
 
 <ul>
-<li>Qualification 1</li>
-<li>Qualification 2</li>
+<li>NNEB</li>
+<li>Childminding course through Surrey County Council</li>
+<li>Paediatric first aid</li>
+<li>Food hygiene</li>
+<li>Planning in the early years foundation stage</li>
+<li>Observation in the early years foundation stage</li>
+<li>Child protection</li>
 </ul>
 
 
             <div class="footer">
               <div class="contact">
                 <p>
-                  Your Name<br />
-                  What You Are<br />
-                  your@email.com
+                  Dawn Hester<br />
                 </p>
               </div>
               <div class="contact">
-                <p>
-                  <a href="http://github.com/yourusername/">github.com/yourusername</a><br />
-                  <a href="http://twitter.com/yourusername/">twitter.com/yourusername</a><br />
+                <p>Telephone: <a href="tel:01276681645">01276 681645</a>
                 </p>
               </div>
             </div>
