--- a/service.html
+++ b/service.html
@@ -42,7 +42,8 @@
                     <li class="even"><a class="extra" href="/service.html">my service</a></li>
                     <li class="odd"><a class="extra" href="/qualifications.html">qualifications</a></li>
                     <li class="even"><a class="extra" href="/vacancies.html">vacancies</a></li>
-                    <li class="odd"><a class="extra" href="/contact.html">contact me</a></li>
+                    <li class="odd"><a class="extra" href="/fees.html">contact me</a></li>
+                    <li class="even"><a class="extra" href="/contact.html">contact me</a></li>
                     
                 </ul>
               </nav>
@@ -50,21 +51,38 @@
             </header>
                 <h1>My Services </h1>
 
-<p>This is information about the <em>amazing</em> services we provide.</p>
+<p>I am open from 8am to 6pm Monday to Friday, but I am flexible if you have specific requirements. Pleae <a href="/contact.html">contact me</a> to discuss your requirements. The children have access to a range of toys and resources that cover all the early years foundation stage areas of learning.</p>
+
+<p>These are: </p>
+
+<h2>Prime areas</h2>
+
+<ul>
+<li>Communication and language development</li>
+<li>Personal social and emotional development</li>
+<li>Physical development</li>
+</ul>
+
+<h2>Specific Areas</h2>
+
+<ul>
+<li>Literacy</li>
+<li>Mathematics</li>
+<li>Understanding the world</li>
+<li>Expressive arts and design</li>
+</ul>
+
+<p>The children also visit the local library, soft play areas, parks, nature walks,  and local groups so they have access to lots of fun learning experiences.</p>
 
 
             <div class="footer">
               <div class="contact">
                 <p>
-                  Your Name<br />
-                  What You Are<br />
-                  your@email.com
+                  Dawn Hester<br />
                 </p>
               </div>
               <div class="contact">
-                <p>
-                  <a href="http://github.com/yourusername/">github.com/yourusername</a><br />
-                  <a href="http://twitter.com/yourusername/">twitter.com/yourusername</a><br />
+                <p>Telephone: <a href="tel:01276681645">01276 681645</a>
                 </p>
               </div>
             </div>
