--- a/vacancies.html
+++ b/vacancies.html
@@ -42,29 +42,33 @@
                     <li class="even"><a class="extra" href="/service.html">my service</a></li>
                     <li class="odd"><a class="extra" href="/qualifications.html">qualifications</a></li>
                     <li class="even"><a class="extra" href="/vacancies.html">vacancies</a></li>
-                    <li class="odd"><a class="extra" href="/contact.html">contact me</a></li>
+                    <li class="odd"><a class="extra" href="/fees.html">contact me</a></li>
+                    <li class="even"><a class="extra" href="/contact.html">contact me</a></li>
                     
                 </ul>
               </nav>
                   
             </header>
-                <h1>Vancancies</h1>
+                <h1>Childcare Vancancies &amp; Places</h1>
 
-<p>Here are my current vancies</p>
+<p>I currently have the following places available for childcare.</p>
+
+<ul>
+<li>School holiday places</li>
+<li>Full time places available from September</li>
+<li>Part time places available on Thursday/Friday</li>
+<li>After school care - South Camberley Infants School (Orchard campus only)</li>
+</ul>
 
 
             <div class="footer">
               <div class="contact">
                 <p>
-                  Your Name<br />
-                  What You Are<br />
-                  your@email.com
+                  Dawn Hester<br />
                 </p>
               </div>
               <div class="contact">
-                <p>
-                  <a href="http://github.com/yourusername/">github.com/yourusername</a><br />
-                  <a href="http://twitter.com/yourusername/">twitter.com/yourusername</a><br />
+                <p>Telephone: <a href="tel:01276681645">01276 681645</a>
                 </p>
               </div>
             </div>
