--- a/qualifications.html
+++ b/qualifications.html
@@ -34,7 +34,7 @@
           <div class="site">
             <header>
                 
-                <a class="logo" href="/"><img src="images/balloon.svg" width="83" height="135" /></a>
+                <a class="logo" href="/"><img src="/images/balloon.svg" width="83" height="135" /></a>
               <h1 class="title"><a href="/">Blue Balloon Childcare</a></h1>
               <nav>
                 <ul>
