--- a/qualifications.html
+++ b/qualifications.html
@@ -64,7 +64,7 @@
 </ul>
 
 
-            <div class="footer">
+            <footer>
               <div class="contact">
                 <p>
                   Dawn Hester<br />
@@ -74,7 +74,7 @@
                 <p>Telephone: <a href="tel:01276681645">01276 681645</a>
                 </p>
               </div>
-            </div>
+            </footer>
           </div>
         </div> <!-- /container -->
 
