--- a/service.html
+++ b/service.html
@@ -75,7 +75,7 @@
 <p>The children also visit the local library, soft play areas, parks, nature walks,  and local groups so they have access to lots of fun learning experiences.</p>
 
 
-            <div class="footer">
+            <footer>
               <div class="contact">
                 <p>
                   Dawn Hester<br />
@@ -85,7 +85,7 @@
                 <p>Telephone: <a href="tel:01276681645">01276 681645</a>
                 </p>
               </div>
-            </div>
+            </footer>
           </div>
         </div> <!-- /container -->
 
