--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
 <p>Please use my contact details below</p>
 
 
-            <div class="footer">
+            <footer>
               <div class="contact">
                 <p>
                   Dawn Hester<br />
@@ -64,7 +64,7 @@
                 <p>Telephone: <a href="tel:01276681645">01276 681645</a>
                 </p>
               </div>
-            </div>
+            </footer>
           </div>
         </div> <!-- /container -->
 
