--- a/fees.html
+++ b/fees.html
@@ -63,7 +63,7 @@
 <p>Babysitting services are also available.</p>
 
 
-            <div class="footer">
+            <footer>
               <div class="contact">
                 <p>
                   Dawn Hester<br />
@@ -73,7 +73,7 @@
                 <p>Telephone: <a href="tel:01276681645">01276 681645</a>
                 </p>
               </div>
-            </div>
+            </footer>
           </div>
         </div> <!-- /container -->
 
