--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Your New Jekyll Site</title>
+        <title>Blue Balloon Childcare</title>
         <meta name="viewport" content="width=device-width">
 
         <!-- syntax highlighting CSS -->
