Various typos. SVG now PNG on old browsers

--- a/fees.html
+++ b/fees.html
@@ -34,7 +34,9 @@
           <div class="site">
             <header>
                 
-                <a class="logo" href="/"><img src="/images/balloon.svg" width="83" height="135" /></a>
+                <a class="logo" href="/">
+                    <img src="/images/balloon.svg" onerror="this.onerror=null; this.src='/images/balloon.png'">
+                </a>
               <h1 class="title"><a href="/">Blue Balloon Childcare</a></h1>
               <nav>
                 <ul>
@@ -58,7 +60,7 @@
 <li>Before / After school - £5.00 per hour</li>
 </ul>
 
-<p>(Additional charges for school pickup / dropoff).</p>
+<p>(Additional charges for pre-school pickup / dropoff).</p>
 
 <p>Babysitting services are also available.</p>
 
