--- a/_posts/2010-12-15-ultra-find-visual-studio-2010.html
+++ b/_posts/2010-12-15-ultra-find-visual-studio-2010.html
@@ -12,7 +12,7 @@ meta:
 <p>If you use Visual Studio 2010 you should install "ultra find" and set it up properly to index your solutions, and you'll have accurate search results in seconds.</p>
 
 <h3>Why?</h3>
-
+<!--break-->
 <p>I am often looking at ways to improve my development speed, and I realised that I spent too much time waiting for a "Find" to be performed on out large website folder.</p>
 
 <p>After upgrading to Visual Studio 2010 I quickly installed loads of great extension, but by far my favourite is <a href="http://visualstudiogallery.msdn.microsoft.com/en-us/9fa9fdd7-1c06-45e3-a9f3-0381caab8f94">Ultra Find</a>.</p>
