--- a/_posts/2013-04-08-refactoring-a-javascript-function.html
+++ b/_posts/2013-04-08-refactoring-a-javascript-function.html
@@ -33,7 +33,7 @@ Here is a function from my javascript:
    }
 };</pre>
 I thought it would be fun to refactor.
-
+<!--break-->
 1) make the function public, not global:
 <pre>this.CallbackTodoSummary = function (result) {</pre>
 2) Simplify the null check
