--- a/_posts/2011-04-06-dont-use-identity.html
+++ b/_posts/2011-04-06-dont-use-identity.html
@@ -13,7 +13,7 @@ Okay, I just got burned by an @@Identity bug in SQL Server. What is that?
 
 I had a written a spec that made it necessary for the developer to create a row in a database and return the ID to the application, then this ID would trigger an email to be sent in the site.
 
-Suddenly it breaks, why? Check out the @@Identity anti-pattern
+Suddenly it breaks, why? <!--break-->Check out the @@Identity anti-pattern
 
 <span style="font-family:'Courier New';font-size:x-small;"><span style="color:blue;">CREATE</span> <span style="color:blue;">TABLE</span> <span style="color:maroon;">main</span></span>
 
