--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@ title: Digiguru Home
 ---
 
 <div id="home">
-  <h1>Blog Posts</h1>
+  <h1>Random musings</h1>
   <ul class="posts">
-   
-      
       
     {% for post in paginator.posts %}
       <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
@@ -18,6 +16,7 @@ title: Digiguru Home
       <div class="content">
         {{ post.content | split:'<!--break-->' | first }}
         {% if post.content contains '<!--break-->' %}
+            <br />
             <a href="{{ post.url }}">read more</a>
         {% endif %}
       </div>
