--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 ---
 layout: default
 title: Digiguru Home
-
+paginate: true
+##  collection:   posts
+##  per_page:     10             # maximum number of items per page 
+##  limit:        5              # Maximum number of pages to paginate (false for unlimited)
+##  permalink:    /page:num/     # pagination path (relative to template page)
+##  title_suffix: " - page :num" # Append to template's page title
+##  category:     ''             # Paginate items in this category
+##  categories:   []             # Paginate items in any of these categories
+##  tag:          ''             # Paginate items tagged with this tag
+##  tags:         []             # Paginate items tagged with any of these tags
 ---
 
 <div id="home">
-  <h1>Random musings</h1>
+  <h1>Random musings - {{ paginator.total_posts }} of {{ paginator.total_pages }}</h1>
   <ul class="posts">
       
     {% for post in paginator.posts %}
