--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ paginate: true
 ---
 
 <div id="home">
-  <h1>Random musings - {{ paginator.total_posts }} of {{ paginator.total_pages }}</h1>
+  <h1>Random musings</h1>
   <ul class="posts">
       
     {% for post in paginator.posts %}
