--- a/test/qunit copy.html
+++ b/test/qunit copy.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>QUnit Test Results for: test.js</title>
 <link rel="stylesheet" href="qunit.css">
-<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 <script src='qunit.js'></script>
 </head>
 <body>
