--- a/decks.html
+++ b/decks.html
@@ -14,7 +14,7 @@ paginate: true
         <tr>
           <td>{{presentation.version}}
             </td>
-            <td>{{presentation.date | date: "%-d %B %Y"}}</td> 
+            <td>{{presentation.date | date_to_string}}</td> 
             <td><a href="presentation-ai-2023/{{presentation.url}}">{{presentation.name}}</a></td>
             <td>{% if presentation.attendance %}
             {{presentation.attendance}} attendees
