--- a/index.html
+++ b/index.html
@@ -22,14 +22,16 @@ paginate: true
     {% for post in paginator.posts %}
       <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
       <p class="author">
-        <span class="date">{{ post.date }}</span>
+        <span class="date">{{ post.date | date_to_string }}</span>
       </p>
       <div class="content">
         {{ post.content | split:'<!--break-->' | first }}
+
         {% if post.content contains '<!--break-->' %}
             <br />
             <a href="{{ post.url }}">read more</a>
         {% endif %}
+        ({{ post.content | reading_time }})
       </div>
     {% endfor %}
 
