--- a/tweets.html
+++ b/tweets.html
@@ -6,8 +6,10 @@ paginate: true
 
 <div id="home">
   <h1>Best Tweets by date</h1>
+  <p>Following is a collection of some of my favourite tweets over the last year.</p>
  
   {% include tweet-menu.html %}
+
 
 </div>
 
